# taller-linux

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
src/: main.py
